# Unified-Project-Group-7

./: .gitignore  CLAUDE.md  DOKUMENTASI_PROYEK_KELOMPOK_7.md  DOKUMENTASI_SISTEM_v2.md  Final_Unified_Audit_Report.md  GEMINI.md  GRAYBOX_QUICKSTART.md  README.md  Remediation_Roadmap.md  Rules_of_Engagement.md  agent_orchestrator.py  chain-20260517-135156-chain.json  chain-20260517-135156-navigator.json  chain-20260517-135156-report.html  chain-20260517-135156-report.md  chain-20260517-141214-chain.json  chain-20260517-141214-navigator.json  chain-20260517-141214-report.html  chain-20260517-141214-report.md  index_uu_pdp.py  jumpserver-comprehensive-report.md  mitre_attack_db.json  pentest-report-login-logs.md  run_graybox.py  tools_bridge.py
.gemini/: settings.json
.gemini/commands/: run-audit.md  set-target.md
.opencode/: opencode.jsonc
.opencode/commands/: pentest.md
mcp-pentest-server/src/: .tool_effectiveness.json  .tool_registry.json  __init__.py  cache_manager.py  cve_correlator.py  decision_engine.py  effectiveness_tracker.py  ekb_manager.py  guards.py  http_dashboard.py  ptg_manager.py  run_dashboard.py  run_server.py  self_reflect.py  server.py  summarizer.py  tool_registry.py  validators.py  vulnerability_correlator.py
scripts/: credential_manager.py  cvss_calculator.py  install_metasploit.sh  mcp_metasploit.py  mitre_attack_mapper.py  report_generator.py
skills/: api_pentest.md  mitre_attack_mapper.md  pdp_compliance_auditor.md
unified-pdp/: .gitignore  README.md  pyproject.toml  requirements.txt
unified-pdp/agents_config/workflows/: bugbounty_workflow.yaml  capstone_attack_chain.yaml
unified-pdp/clients/: claude_desktop_config.json  opencode_mcp.jsonc
unified-pdp/scripts/: health_check.py  install_tools.sh  uu_pdp_reference.py
unified-pdp/tests/: test_mcp_server.py
