[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-pdp"
version = "1.0.0"
description = "AI-Powered MCP Pentest Server with 150+ tools, MITRE ATT&CK, CVSS v3.1, and UU PDP Compliance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Kelompok 7", email = "kelompok7@unified-shield.local"},
]
keywords = [
    "pentesting",
    "mcp",
    "cybersecurity",
    "ai-agents",
    "vulnerability-scanning",
    "uu-pdp",
    "mitre-attack",
    "cvss",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
rag = [
    "langchain>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.0",
    "huggingface-hub>=0.20.0",
]
reporting = [
    "weasyprint>=60.0",
    "markdown>=3.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
unified-pdp = "mcp_server.main:main"

[project.urls]
Homepage = "https://github.com/kelompok7/unified-pdp"
Documentation = "https://github.com/kelompok7/unified-pdp/docs"
Repository = "https://github.com/kelompok7/unified-pdp"
Issues = "https://github.com/kelompok7/unified-pdp/issues"

[tool.setuptools.packages.find]
include = ["mcp_server*"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
